# heroku-deploy-binary

./: .gitignore  .travis.yml  LICENSE  README.md  cabal.config  heroku-deploy-binary.cabal  stack.yaml
app/: Main.hs
